--- a/SingularityUI/app/styles/requestsTasksTable.styl
+++ b/SingularityUI/app/styles/requestsTasksTable.styl
@@ -47,3 +47,15 @@
 .tooltip-inner
     max-width: 250px
     white-space: pre-wrap
+
+div.dataTables_paginate li.next a:after
+    display: none !important
+
+div.dataTables_paginate li.previous a:before
+    display: none !important
+
+div.dataTables_paginate li.next a
+    padding-right: 12px !important
+
+div.dataTables_paginate li.previous a
+    padding-left: 12px !important
