Move arrows to center

--- a/SingularityUI/app/styles/requestsTasksTable.styl
+++ b/SingularityUI/app/styles/requestsTasksTable.styl
@@ -59,3 +59,8 @@ div.dataTables_paginate li.next a
 
 div.dataTables_paginate li.previous a
     padding-left: 12px !important
+
+ul.pagination
+    position: absolute
+    left: -40px
+    z-index: 99
