Add active deploy link and fix cmd info

--- a/SingularityUI/app/templates/deployDetail/deployInfo.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployInfo.hbs
@@ -19,7 +19,7 @@
         <li class="col-md-4">
             <div>
                 <h4>Command<a data-clipboard-text="{{ timestampFromNow data.deploy.command }}">Copy</a></h4>
-                <p>{{ data.deploy.command }}</p>
+                <p>{{ data.deploy.executorData.cmd }}</p>
             </div>
         </li>
         <li class="col-md-4">
