Forgot clipboard text

--- a/SingularityUI/app/templates/deployDetail/deployInfo.hbs
+++ b/SingularityUI/app/templates/deployDetail/deployInfo.hbs
@@ -18,7 +18,7 @@
         </li>
         <li class="col-md-4">
             <div>
-                <h4>Command<a data-clipboard-text="{{ timestampFromNow data.deploy.command }}">Copy</a></h4>
+                <h4>Command<a data-clipboard-text="{{ timestampFromNow data.deploy.executorData.cmd }}">Copy</a></h4>
                 <p>{{ data.deploy.executorData.cmd }}</p>
             </div>
         </li>
