--- a/SingularityUI/app/templates/deployDetail/activeTasks.hbs
+++ b/SingularityUI/app/templates/deployDetail/activeTasks.hbs
@@ -3,7 +3,7 @@
 </div>
 {{#if data.length}}
     <div class="table-container">
-        <table class="table table-striped paginated">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>
