--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -38,6 +38,9 @@
             {{#slaveHttpsPort}}
             slaveHttpsPort: {{{slaveHttpsPort}}}
             {{/slaveHttpsPort}}
+            {{#shellCommands}}
+            shellCommands: {{{shellCommands}}}
+            {{/shellCommands}}
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
