--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -36,11 +36,9 @@
             commonHostnameSuffixToOmit: "{{{ commonHostnameSuffixToOmit }}}",
             slaveHttpPort: {{{slaveHttpPort}}},
             {{#slaveHttpsPort}}
-            slaveHttpsPort: {{{slaveHttpsPort}}}
+            slaveHttpsPort: {{{slaveHttpsPort}}},
             {{/slaveHttpsPort}}
-            {{#shellCommands}}
-            shellCommands: {{{shellCommands}}}
-            {{/shellCommands}}
+            shellCommands: {{{shellCommands}}},
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
