--- a/SingularityUI/app/templates/taskDetail/taskShellCommands.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskShellCommands.hbs
@@ -12,22 +12,71 @@
       </h2>
   </div>
   <div class='{{#unless expanded}}hide{{/unless}}'>
-    <h3>Execute a command</h3>
-    <form class="col-md-6" id="runShell" action="">
-      <div class="form-group required">
-        <label for="cmd">Select command</label>
-        <select name="cmd" class="form-control input-large" id="cmd">
-          <option value="" disabled selected></option>
-          {{#each config.shellCommands}}
-            <option value="{{name}}">{{name}}</option>
-          {{/each}}
-        </select>
-        <p class="cmd-description"></p>
-        <label for="cmd-option">Options</label>
-        <select multiple name="cmd-option" class="form-control input-large" id="cmd-option" disabled></select>
+    <div class="row">
+      <form class="col-md-6" id="runShell" action="">
+        <h3>Execute a command</h3>
+        <div class="form-group required">
+          <label for="cmd">Select command</label>
+          <select name="cmd" class="form-control input-large" id="cmd">
+            <option value="" disabled selected></option>
+            {{#each config.shellCommands}}
+              <option value="{{name}}">{{name}}</option>
+            {{/each}}
+          </select>
+          <p class="cmd-description"></p>
+          <label for="cmd-option">Options</label>
+          <select multiple name="cmd-option" class="form-control input-large" id="cmd-option" disabled></select>
+        </div>
+        <button type="submit" id="btn_exec" class="btn btn-success" type="button" disabled>Run</button>
+      </form>
+    </div>
+    {{#if data.shellCommandHistory.length}}
+      <div class="row">
+          <div class="col-md-12">
+              <h3>Command History</h3>
+              <div class="table-container">
+                  <table class="table table-striped paginated">
+                      <thead>
+                          <tr>
+                              <th>Timestamp</th>
+                              <th>Command</th>
+                              <th>Options</th>
+                              <th>User</th>
+                              <th>Status</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          {{#each data.shellCommandHistory}}
+                              <tr>
+                                  <td data-value="{{ shellRequest.timestamp }}">
+                                      {{timestampFormatted shellRequest.timestamp}}
+                                  </td>
+                                  <td>
+                                      <code>{{shellRequest.shellCommand.name}}</code>
+                                  </td>
+                                  <td>
+                                      {{#if shellRequest.shellCommand.options.length}}
+                                          <code>{{shellRequest.shellCommand.options}}</code>
+                                      {{/if}}
+                                  </td>
+                                  <td>
+                                      {{shellRequest.user}}
+                                  </td>
+                                  <td>
+
+                                  </td>
+                              </tr>
+                          {{/each}}
+                      </tbody>
+                  </table>
+              </div>
+          </div>
       </div>
-      <button type="submit" id="btn_exec" class="btn btn-success" type="button" disabled>Run</button>
-    </form>
+    {{else}}
+        <div class="empty-table-message">
+            No commands run
+        </div>
+    {{/if}}
   </div>
 {{else}}
     <div class="page-loader centered cushy"></div>
