--- a/SingularityUI/app/templates/taskDetail/taskShellCommands.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskShellCommands.hbs
@@ -27,6 +27,7 @@
           <select multiple name="cmd-option" class="form-control input-large" id="cmd-option" disabled></select>
         </div>
         <button type="submit" id="btn_exec" class="btn btn-success" type="button">Run</button>
+        <span id="cmd-confirm"></span>
       </form>
     </div>
     {{#if data.shellCommandHistory.length}}
