--- a/SingularityExecutor/src/main/resources/runner.sh.hbs
+++ b/SingularityExecutor/src/main/resources/runner.sh.hbs
@@ -62,9 +62,10 @@ fi
 
 # execute command
 {{#if shouldChangeUser}}
-echo "Executing: sudo -E -u {{{ user }}} {{{ cmd }}} >> ../{{{ logFile }}} 2>&1"
-exec sudo -E -u {{{ user }}} {{{ cmd }}} >> ../{{{ logFile }}} 2>&1
+echo "Executing: sudo -E -u {{{ user }}} ({{#if maxOpenFiles}}ulimit -n {{{maxOpenFiles}}} && {{/if}}{{{ cmd }}}) >> ../{{{ logFile }}} 2>&1"
+exec sudo -E -u {{{ user }}} ({{#if maxOpenFiles}}ulimit -n {{{maxOpenFiles}}} && {{/if}}{{{ cmd }}}) >> ../{{{ logFile }}} 2>&1
 {{else}}
 echo "Executing: {{{ cmd }}} >> ../{{{ logFile }}} 2>&1"
+{{#if maxOpenFiles}}ulimit -n {{{maxOpenFiles}}}{{/if}}
 exec {{{ cmd }}} >> ../{{{ logFile }}} 2>&1
 {{/if}}
