tweaks to upload logs with proper file extensions

--- a/SingularityExecutor/src/main/resources/logrotate.conf.hbs
+++ b/SingularityExecutor/src/main/resources/logrotate.conf.hbs
@@ -11,6 +11,7 @@ notifempty
 {{{ logfile }}} {
   dateformat {{{ rotateDateformat }}}
   olddir {{{ rotateDirectory }}}
+  {{#if logfileExtension}}extension .{{{ logfileExtension }}}{{/if}}
 }
 
 {{#if extrasFiles}}
