just duplicate extension -- much simpler

--- a/SingularityExecutor/src/main/resources/logrotate.conf.hbs
+++ b/SingularityExecutor/src/main/resources/logrotate.conf.hbs
@@ -9,9 +9,8 @@ maxage {{{ maxageDays }}}
 notifempty
 
 {{{ logfile }}} {
-  dateformat {{{ rotateDateformat }}}
+  dateformat {{{ rotateDateformat }}}{{#if logfileExtension}}.{{{ logfileExtension}}}{{/if}}
   olddir {{{ rotateDirectory }}}
-  {{#if logfileExtension}}extension .{{{ logfileExtension }}}{{/if}}
 }
 
 {{#if extrasFiles}}
